--- a/canvas/dibujo.html
+++ b/canvas/dibujo.html
@@ -10,7 +10,11 @@
 </head>
 <body>
     <h1>Dibujo en Canvas</h1>
-    <canvas width="300" height="300" id="dibujito"></canvas>
+    <p>Cuantas Lineas Quieres
+        <input type="text" id="texto_lineas"/>
+        <input type="button" value="''Dibujar!''" id="botoncito"/>
+    </p>
+    <canvas width="400" height="400" id="dibujito"></canvas>
     <p>Asi queda tu dibujo</p>
     <script src="dibujo.js"></script>
 </body>
